# fhe-evaluator

./: .gitignore  AGENTS.md  CMakeLists.txt  print.md
docs/: asym_coeff_pattern_planner_results.md  asym_exponent_decomposition_results.md  asym_generated_plan_executor_results.md  asym_generated_plan_patterns_results.md  asym_plan_executor_results.md  asym_plan_object_smoke_results.md  asym_plan_table_executor_results.md  asym_proto_milestone_20_25.md  asym_proto_t2_results.md  asym_proto_t3_grouped_fold_results.md  asym_proto_t3_outer_assembly_results.md  asym_proto_t3_outer_pattern_results.md  asym_proto_t3_poly_eval_results.md  asym_proto_t3_survival_results.md  asym_whitelisted_planner_results.md  asymmetric_bsgs_ckks_impl_notes.md  degree8_v1_results.md  internal_bsgs_capability_report_results.md  internal_bsgs_coeff_list_results.md  internal_bsgs_generated_plan_results.md  internal_bsgs_milestone_34_35.md  internal_bsgs_proto_results.md  internal_bsgs_runtime_benchmark_results.md  project_progress_summary.md  thesis_experiment_table_draft.md  thesis_implementation_draft.md
include/: ckks_lazy_poly_evaluator.h  internal_bsgs_common.h  smoke_common.h
logs/: internal_bsgs_runtime_samples_2026-04-21.csv
src/: main.cpp  smoke_common.cpp
src/baseline/: ckks_baseline_01_square_chain.cpp  ckks_baseline_02_double_square_aggregate.cpp  ckks_baseline_03_poly_block_fold.cpp
src/benchmark/: ckks_benchmark_01_internal_bsgs_runtime.cpp
src/evaluator/: ckks_evaluator_01_poly_naive.cpp  ckks_evaluator_02_poly_lazy.cpp  ckks_evaluator_03_poly2_affine_compare.cpp  ckks_evaluator_04_poly3_compare.cpp  ckks_evaluator_05_power_cache_trace.cpp  ckks_evaluator_06_baby_step_block_trace.cpp  ckks_evaluator_07_baby_step_linear_block_eval.cpp  ckks_evaluator_08_grouped_same_state_block_eval.cpp  ckks_evaluator_09_two_block_outer_assembly.cpp  ckks_evaluator_10_coeff_block_outer_assembly.cpp  ckks_evaluator_11_param_coeff_blocks.cpp  ckks_evaluator_12_coeff_pattern_regression.cpp  ckks_evaluator_20_asym_proto_t2.cpp  ckks_evaluator_21_asym_proto_t3_survival.cpp  ckks_evaluator_22_asym_proto_t3_grouped_fold.cpp  ckks_evaluator_23_asym_proto_t3_poly_eval.cpp  ckks_evaluator_24_asym_proto_t3_outer_assembly.cpp  ckks_evaluator_25_asym_proto_t3_outer_pattern.cpp  ckks_evaluator_26_asym_plan_object_smoke.cpp  ckks_evaluator_27_asym_plan_executor.cpp  ckks_evaluator_28_asym_plan_table_executor.cpp  ckks_evaluator_29_asym_whitelisted_planner.cpp  ckks_evaluator_30_asym_coeff_pattern_planner.cpp  ckks_evaluator_31_asym_exponent_decomposition.cpp  ckks_evaluator_32_asym_generated_plan_executor.cpp  ckks_evaluator_33_asym_generated_plan_patterns.cpp  ckks_evaluator_34_internal_bsgs_proto.cpp  ckks_evaluator_35_internal_bsgs_generated_plan.cpp  ckks_evaluator_36_internal_bsgs_coeff_list.cpp  ckks_evaluator_37_internal_bsgs_capability_report.cpp  ckks_lazy_poly_evaluator.cpp
src/lazy/: ckks_lazy_01_square_chain.cpp  ckks_lazy_02_double_square_aggregate.cpp  ckks_lazy_03_poly_block_fold.cpp
src/smoke/: ckks_smoke_01_norelin.cpp  ckks_smoke_02_relin_add_same_scale.cpp  ckks_smoke_03_rescale_manual.cpp  ckks_smoke_04_scaling_modes.cpp  ckks_smoke_05_evalpolyps.cpp  ckks_smoke_06_mixed_add.cpp
src/survival/: ckks_survival_01_state_trace.cpp  ckks_survival_02_raw_square_times_x.cpp  ckks_survival_03_raw_cube_times_x.cpp
